--- a/scripts/prep/04_create_subject_list.ipynb
+++ b/scripts/prep/04_create_subject_list.ipynb
@@ -4,20 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* replacing \"150-480\": \"315 (NYU1 mean bewteen 150 and 480)\n",
-    "* fill in retest units for IPCAS4 XHCUMS"
+    "This notebook creates a subject list for subjects that should be fed into baracus.\n",
+    "Criteria:\n",
+    "* demo info and mri\n",
+    "* age >=18\n",
+    "* at least one retest session >=7d\n",
+    "* exclude sites with N<20\n",
+    "\n",
+    "The script makes corrections as som things are missing from the raw data:\n",
+    "* drop subjects with retest_duration \"150-480\". (NYU1)\n",
+    "* fill in retest units for IPCAS4 XHCUMS\n",
+    "\n",
+    "Input:\n",
+    "* session_info.tsv (based on : 01_create_dl_file.py; 02_create_onestudy_bids.py; 03_collect_session_info.py ) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from os.path import join as opj\n",
-    "root_dir = \"/Users/franzliem/Desktop/corr/demos/\""
+    "root_dir = \"/Users/franzliem/Dropbox/baracorrus_data/data\"\n",
+    "out_dir = \"/Users/franzliem/Dropbox/baracorrus_data/results\""
    ]
   },
   {
@@ -37,14 +51,14 @@
      "output_type": "stream",
      "text": [
       "participant_id                     0\n",
-      "preceding_condition             3292\n",
-      "resting_state_instruction       3234\n",
-      "retest_design                   3026\n",
-      "retest_duration                 1532\n",
-      "retest_units                    1604\n",
+      "preceding_condition             3267\n",
+      "resting_state_instruction       3121\n",
+      "retest_design                   2913\n",
+      "retest_duration                 1510\n",
+      "retest_units                    1582\n",
       "session_id                         0\n",
       "site                               0\n",
-      "visual_stimulation_condition    3154\n",
+      "visual_stimulation_condition    3041\n",
       "session_kind                       0\n",
       "dtype: int64\n"
      ]
@@ -181,10 +195,10 @@
     }
    ],
    "source": [
-    "df_sessions = pd.read_csv(opj(root_dir, \"session_info.tsv\"), sep=\"\\t\", na_values=\"n/a\")\n",
+    "df_sessions = pd.read_csv(opj(root_dir, \"from_1000fc\", \"session_info.tsv\"), sep=\"\\t\", na_values=\"n/a\")\n",
     "df_sessions[\"session_kind\"] = \"retest\"\n",
     "df_sessions.loc[df_sessions.session_id==\"ses-1\", \"session_kind\"] = \"test\"\n",
-    "df_sessions.replace({\"retest_duration\":{\"150-480\": \"315\"}}, inplace=True)\n",
+    "df_sessions = df_sessions[df_sessions.retest_duration != \"150-480\"]\n",
     "\n",
     "# drop and take from corr pheno file:\n",
     "df_sessions.drop(labels=[ \"sex\", \"age_at_scan_1\", \"handedness\"], axis=1, inplace=True)\n",
@@ -197,11 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_test = df_sessions[df_sessions.session_kind==\"test\"].copy()\n",
-    "df_test.drop(labels=[\"retest_duration\", \"retest_units\"], axis=1, inplace=True)\n"
+    "df_test.drop(labels=[\"retest_duration\", \"retest_units\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -213,14 +229,14 @@
      "data": {
       "text/plain": [
        "participant_id                     0\n",
-       "preceding_condition             2087\n",
-       "resting_state_instruction       2729\n",
-       "retest_design                   2516\n",
+       "preceding_condition             2062\n",
+       "resting_state_instruction       2638\n",
+       "retest_design                   2425\n",
        "retest_duration                    0\n",
        "retest_units                       0\n",
        "session_id                         0\n",
        "site                               0\n",
-       "visual_stimulation_condition    2649\n",
+       "visual_stimulation_condition    2558\n",
        "session_kind                       0\n",
        "dtype: int64"
       ]
@@ -239,7 +255,7 @@
     "df_retest.loc[df_retest[\"site\"]==\"XHCUMS\", [\"retest_units\"]] = \"days\"\n",
     "df_retest.replace({\"retest_units\":{\"w\":\"weeks\"}}, inplace=True)\n",
     "df_retest = df_retest.dropna(subset=[\"retest_duration\"])\n",
-    "df_retest.isnull().sum()\n"
+    "df_retest.isnull().sum()"
    ]
   },
   {
@@ -406,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pheno = pd.read_csv(opj(root_dir, \"corr.csv\"), na_values=[\"#\", \"NoPhenotypicData\"], dtype={\"SUBID\":str})\n",
+    "df_pheno = pd.read_csv(opj(root_dir, \"from_corr\", \"corr.csv\"), na_values=[\"#\", \"NoPhenotypicData\"], dtype={\"SUBID\":str})\n",
     "df_pheno.columns = [c.lower() for c in df_pheno.columns]\n",
     "df_pheno.site = df_pheno.site.str.replace(\"_\", \"\")\n",
     "df_pheno.dropna(subset=[\"subid\"], inplace=True)\n",
@@ -432,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4052, 12)\n"
+      "(3939, 12)\n"
      ]
     },
     {
@@ -584,7 +600,7 @@
     "df = pd.merge(df, demos, how=\"inner\", on=[\"participant_id\"])\n",
     "df.to_clipboard()\n",
     "print(df.shape)\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -608,6 +624,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": true,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -624,7 +641,7 @@
     {
      "data": {
       "text/plain": [
-       "726"
+       "679"
       ]
      },
      "execution_count": 9,
@@ -662,8 +679,7 @@
     "print(\"Drop the following site bc they have less than 20 subjects: {}\".format(drop_sites))\n",
     "print(drop_sites_N)\n",
     "\n",
-    "df_baracus = df_baracus[~df_baracus.site.isin(drop_sites)]\n",
-    "\n"
+    "df_baracus = df_baracus[~df_baracus.site.isin(drop_sites)]"
    ]
   },
   {
@@ -675,8 +691,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "724\n",
-      "subects written to /Users/franzliem/Desktop/corr/demos/baracus_subjects.txt\n"
+      "677\n",
+      "subects written to /Users/franzliem/Dropbox/baracorrus_data/results/prepare/baracus_subjects.txt\n"
      ]
     }
    ],
@@ -684,11 +700,59 @@
     "baracus_subjects = df_baracus.participant_id.unique().tolist()\n",
     "print(len(baracus_subjects))\n",
     "\n",
-    "out_file = opj(root_dir, \"baracus_subjects.txt\")\n",
+    "prepare_dir = opj(out_dir, \"prepare\")\n",
+    "if not os.path.isdir(prepare_dir):\n",
+    "    os.makedirs(prepare_dir)\n",
+    "out_file = opj(prepare_dir, \"baracus_subjects.txt\")\n",
     "with open(out_file, \"w\") as fi:\n",
     "    fi.write(\"\\n\".join(baracus_subjects))\n",
     "print(\"subects written to {}\".format(out_file))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "site\n",
+       "BNU1       57\n",
+       "BNU2       61\n",
+       "HNU1       30\n",
+       "IACAS      28\n",
+       "IPCAS1     29\n",
+       "IPCAS8     13\n",
+       "LMU3       25\n",
+       "NYU2       31\n",
+       "SWU4      232\n",
+       "UM         80\n",
+       "UPSM1      26\n",
+       "UWM        25\n",
+       "Utah1      16\n",
+       "XHCUMS     24\n",
+       "Name: participant_id, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ = df_baracus[[\"participant_id\", \"site\"]].copy()\n",
+    "df_.drop_duplicates(inplace=True)\n",
+    "N = df_.groupby(\"site\").count()[\"participant_id\"]\n",
+    "N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -724,5 +788,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
